src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'elif'", "'('", "')'", "'['", "']'", 
                     "'.'", "','", "';'", "':'", "'{'", "'}'", "'='", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'::'", 
                     "'auto'", "'break'", "'boolean'", "'do'", "'else'", 
                     "'float'", "'for'", "'function'", "'if'", "'integer'", 
                     "'return'", "'string'", "'while'", "'void'", "'out'", 
                     "'continue'", "'of'", "'inherit'", "'array'" ]

    symbolicNames = [ "<INVALID>", "ELIF", "LB", "RB", "LSP", "RSP", "DOT", 
                      "CM", "SEMI", "CL", "LCP", "RCP", "ASSIGN", "ADDOP", 
                      "SUBOP", "MULOP", "DIVOP", "MODOP", "NOT", "AND", 
                      "OR", "EQUAL", "NEQUAL", "SMALL", "SMALLEQ", "LARGE", 
                      "LARGEEQ", "CONC", "AUTO", "BREAK", "BOOLEAN", "DO", 
                      "ELSE", "FLOAT", "FOR", "FUNCTION", "IF", "INTEGER", 
                      "RETURN", "STRING", "WHILE", "VOID", "OUT", "CONTINUE", 
                      "OF", "INHERIT", "ARRAY", "INTLIT", "FLOATLIT", "BOOLLIT", 
                      "STRINGLIT", "ID", "CCOMMENT", "CPPCOMMENT", "WS", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_decl = 2
    RULE_vardecl = 3
    RULE_shortform = 4
    RULE_idlist = 5
    RULE_vartype = 6
    RULE_initial = 7
    RULE_initialbody = 8
    RULE_fundecl = 9
    RULE_funtype = 10
    RULE_paramlist = 11
    RULE_params = 12
    RULE_param = 13
    RULE_isinherit = 14
    RULE_body = 15
    RULE_blockstmt = 16
    RULE_blockbody = 17
    RULE_stmtlist = 18
    RULE_stmt = 19
    RULE_assignstmt = 20
    RULE_lhs = 21
    RULE_other = 22
    RULE_ifstmt = 23
    RULE_match = 24
    RULE_tailmatch = 25
    RULE_unmatch = 26
    RULE_tailunmatch = 27
    RULE_forstmt = 28
    RULE_whilestmt = 29
    RULE_dowhilestmt = 30
    RULE_breakstmt = 31
    RULE_continuestmt = 32
    RULE_returnstmt = 33
    RULE_callstmt = 34
    RULE_atomictype = 35
    RULE_arraytype = 36
    RULE_dimensions = 37
    RULE_expr = 38
    RULE_expr1 = 39
    RULE_expr2 = 40
    RULE_expr3 = 41
    RULE_expr4 = 42
    RULE_expr5 = 43
    RULE_expr6 = 44
    RULE_expr7 = 45
    RULE_indexop = 46
    RULE_funcall = 47
    RULE_exprlist = 48
    RULE_exprs = 49
    RULE_arraylit = 50

    ruleNames =  [ "program", "decls", "decl", "vardecl", "shortform", "idlist", 
                   "vartype", "initial", "initialbody", "fundecl", "funtype", 
                   "paramlist", "params", "param", "isinherit", "body", 
                   "blockstmt", "blockbody", "stmtlist", "stmt", "assignstmt", 
                   "lhs", "other", "ifstmt", "match", "tailmatch", "unmatch", 
                   "tailunmatch", "forstmt", "whilestmt", "dowhilestmt", 
                   "breakstmt", "continuestmt", "returnstmt", "callstmt", 
                   "atomictype", "arraytype", "dimensions", "expr", "expr1", 
                   "expr2", "expr3", "expr4", "expr5", "expr6", "expr7", 
                   "indexop", "funcall", "exprlist", "exprs", "arraylit" ]

    EOF = Token.EOF
    ELIF=1
    LB=2
    RB=3
    LSP=4
    RSP=5
    DOT=6
    CM=7
    SEMI=8
    CL=9
    LCP=10
    RCP=11
    ASSIGN=12
    ADDOP=13
    SUBOP=14
    MULOP=15
    DIVOP=16
    MODOP=17
    NOT=18
    AND=19
    OR=20
    EQUAL=21
    NEQUAL=22
    SMALL=23
    SMALLEQ=24
    LARGE=25
    LARGEEQ=26
    CONC=27
    AUTO=28
    BREAK=29
    BOOLEAN=30
    DO=31
    ELSE=32
    FLOAT=33
    FOR=34
    FUNCTION=35
    IF=36
    INTEGER=37
    RETURN=38
    STRING=39
    WHILE=40
    VOID=41
    OUT=42
    CONTINUE=43
    OF=44
    INHERIT=45
    ARRAY=46
    INTLIT=47
    FLOATLIT=48
    BOOLLIT=49
    STRINGLIT=50
    ID=51
    CCOMMENT=52
    CPPCOMMENT=53
    WS=54
    UNCLOSE_STRING=55
    ILLEGAL_ESCAPE=56
    ERROR_CHAR=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifstmt(self):
            return self.getTypedRuleContext(MT22Parser.IfstmtContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.ifstmt()
            self.state = 103
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decls(self):
            return self.getTypedRuleContext(MT22Parser.DeclsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecls" ):
                return visitor.visitDecls(self)
            else:
                return visitor.visitChildren(self)




    def decls(self):

        localctx = MT22Parser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.decl()
                self.state = 106
                self.decls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def fundecl(self):
            return self.getTypedRuleContext(MT22Parser.FundeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.fundecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def shortform(self):
            return self.getTypedRuleContext(MT22Parser.ShortformContext,0)


        def initial(self):
            return self.getTypedRuleContext(MT22Parser.InitialContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.shortform()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.initial()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShortformContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def vartype(self):
            return self.getTypedRuleContext(MT22Parser.VartypeContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_shortform

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShortform" ):
                return visitor.visitShortform(self)
            else:
                return visitor.visitChildren(self)




    def shortform(self):

        localctx = MT22Parser.ShortformContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_shortform)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.idlist()
            self.state = 120
            self.match(MT22Parser.CL)
            self.state = 121
            self.vartype()
            self.state = 122
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_idlist)
        try:
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.match(MT22Parser.ID)
                self.state = 125
                self.match(MT22Parser.CM)
                self.state = 126
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VartypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomictype(self):
            return self.getTypedRuleContext(MT22Parser.AtomictypeContext,0)


        def arraytype(self):
            return self.getTypedRuleContext(MT22Parser.ArraytypeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vartype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVartype" ):
                return visitor.visitVartype(self)
            else:
                return visitor.visitChildren(self)




    def vartype(self):

        localctx = MT22Parser.VartypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vartype)
        try:
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.atomictype()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.arraytype()
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 3)
                self.state = 132
                self.match(MT22Parser.AUTO)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitialContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def initialbody(self):
            return self.getTypedRuleContext(MT22Parser.InitialbodyContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_initial

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitial" ):
                return visitor.visitInitial(self)
            else:
                return visitor.visitChildren(self)




    def initial(self):

        localctx = MT22Parser.InitialContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_initial)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(MT22Parser.ID)
            self.state = 136
            self.initialbody()
            self.state = 137
            self.expr()
            self.state = 138
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitialbodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.CM)
            else:
                return self.getToken(MT22Parser.CM, i)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def initialbody(self):
            return self.getTypedRuleContext(MT22Parser.InitialbodyContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def vartype(self):
            return self.getTypedRuleContext(MT22Parser.VartypeContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_initialbody

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitialbody" ):
                return visitor.visitInitialbody(self)
            else:
                return visitor.visitChildren(self)




    def initialbody(self):

        localctx = MT22Parser.InitialbodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_initialbody)
        try:
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.match(MT22Parser.CM)
                self.state = 141
                self.match(MT22Parser.ID)
                self.state = 142
                self.initialbody()
                self.state = 143
                self.expr()
                self.state = 144
                self.match(MT22Parser.CM)
                pass
            elif token in [MT22Parser.CL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.match(MT22Parser.CL)
                self.state = 147
                self.vartype()
                self.state = 148
                self.match(MT22Parser.ASSIGN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FundeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def funtype(self):
            return self.getTypedRuleContext(MT22Parser.FuntypeContext,0)


        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def paramlist(self):
            return self.getTypedRuleContext(MT22Parser.ParamlistContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def isinherit(self):
            return self.getTypedRuleContext(MT22Parser.IsinheritContext,0)


        def body(self):
            return self.getTypedRuleContext(MT22Parser.BodyContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_fundecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFundecl" ):
                return visitor.visitFundecl(self)
            else:
                return visitor.visitChildren(self)




    def fundecl(self):

        localctx = MT22Parser.FundeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_fundecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(MT22Parser.ID)
            self.state = 153
            self.match(MT22Parser.CL)
            self.state = 154
            self.match(MT22Parser.FUNCTION)
            self.state = 155
            self.funtype()
            self.state = 156
            self.match(MT22Parser.LB)
            self.state = 157
            self.paramlist()
            self.state = 158
            self.match(MT22Parser.RB)
            self.state = 159
            self.isinherit()
            self.state = 160
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuntypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vartype(self):
            return self.getTypedRuleContext(MT22Parser.VartypeContext,0)


        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funtype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuntype" ):
                return visitor.visitFuntype(self)
            else:
                return visitor.visitChildren(self)




    def funtype(self):

        localctx = MT22Parser.FuntypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funtype)
        try:
            self.state = 164
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.AUTO, MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING, MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.vartype()
                pass
            elif token in [MT22Parser.VOID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 163
                self.match(MT22Parser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def params(self):
            return self.getTypedRuleContext(MT22Parser.ParamsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paramlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamlist" ):
                return visitor.visitParamlist(self)
            else:
                return visitor.visitChildren(self)




    def paramlist(self):

        localctx = MT22Parser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_paramlist)
        try:
            self.state = 168
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.OUT, MT22Parser.INHERIT, MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.params()
                pass
            elif token in [MT22Parser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(MT22Parser.ParamContext,0)


        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def params(self):
            return self.getTypedRuleContext(MT22Parser.ParamsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = MT22Parser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_params)
        try:
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 170
                self.param()
                self.state = 171
                self.match(MT22Parser.CM)
                self.state = 172
                self.params()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def vartype(self):
            return self.getTypedRuleContext(MT22Parser.VartypeContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = MT22Parser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 177
                self.match(MT22Parser.INHERIT)


            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT:
                self.state = 180
                self.match(MT22Parser.OUT)


            self.state = 183
            self.match(MT22Parser.ID)
            self.state = 184
            self.match(MT22Parser.CL)
            self.state = 185
            self.vartype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IsinheritContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_isinherit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIsinherit" ):
                return visitor.visitIsinherit(self)
            else:
                return visitor.visitChildren(self)




    def isinherit(self):

        localctx = MT22Parser.IsinheritContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_isinherit)
        try:
            self.state = 190
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INHERIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 187
                self.match(MT22Parser.INHERIT)
                self.state = 188
                self.match(MT22Parser.ID)
                pass
            elif token in [MT22Parser.LCP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'
